deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: # kpt-merge: /mopidy
  name: mopidy # kpt-set: ${name}
  annotations:
    internal.kpt.dev/upstream-identifier: 'apps|Deployment|default|mopidy'
spec:
  replicas: 1
  strategy:
    type: Recreate
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/component: webapp
  template:
    metadata:
      labels:
        app.kubernetes.io/component: webapp
    spec:
      serviceAccountName: mopidy # kpt-set: ${name}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      containers:
      - name: app
        image: ghcr.io/mgoltzsche/mopidy:0.7.0 # kpt-set: ${image}:${version}
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 32Mi
        ports:
        - containerPort: 6680 # kpt-set: ${port}
        - containerPort: 6600
        livenessProbe:
          httpGet:
            path: "/mopidy" # kpt-set: ${healthcheck}
            port: 6680 # kpt-set: ${port}
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: "/mopidy" # kpt-set: ${healthcheck}
            port: 6680 # kpt-set: ${port}
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 5
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - name: data
          mountPath: /var/lib/mopidy
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mopidy-data
