deploy/base/ingress-static.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: # kpt-merge: /mopidy-static
  name: mopidy-static
  annotations:
    internal.kpt.dev/upstream-identifier: 'networking.k8s.io|Ingress|default|mopidy-static'
spec:
  ingressClassName: kubemate
  rules:
  - http:
      paths:
      - path: /mopidy-static/
        pathType: Prefix
        backend:
          service:
            name: mopidy # kpt-set: ${name}
            port:
              number: 6680 # kpt-set: ${port}
